Add missing fields to Schema